feat(exam submission module) : added/updated apis need for exam fetch and submission, ensuring continuty of the exam in case of interruption