@@ -7,23 +7,28 @@ package com.oea.online_exam_app.Services;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.LocalTime;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.naming.directory.InvalidAttributesException;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import com.oea.online_exam_app.DTO.ExamResultDetailDTO;
 import com.oea.online_exam_app.DTO.QuestionsDTO;
 import com.oea.online_exam_app.Enums.ExamStatusEnum;
+import com.oea.online_exam_app.Enums.PassingCriteriaEnum;
 import com.oea.online_exam_app.Enums.QuestionSubmissionStatusEnum;
 import com.oea.online_exam_app.Enums.QuestionTypeEnum;
 import com.oea.online_exam_app.IServices.IExamService;
 import com.oea.online_exam_app.Models.Exam;
 import com.oea.online_exam_app.Models.ExamStatus;
 import com.oea.online_exam_app.Models.ExamSubmission;
+import com.oea.online_exam_app.Models.PassingCriteria;
 import com.oea.online_exam_app.Models.ProgrammingSubmission;
 import com.oea.online_exam_app.Models.Question;
 import com.oea.online_exam_app.Models.QuestionSubmission;
@@ -37,7 +42,7 @@ import com.oea.online_exam_app.Repo.ExamSubmissionRepo;
 import com.oea.online_exam_app.Repo.ProgrammingSubmissionRepo;
 import com.oea.online_exam_app.Repo.QuestionSubmissionRepo;
 import com.oea.online_exam_app.Repo.QuestionTypeRepo;
-import com.oea.online_exam_app.Repo.UserRepo;
+
 
 /**
  *
@@ -67,8 +72,6 @@ public class ExamService implements IExamService {
     @Autowired
     private ExamStatusRepo examStatusRepo;
 
-    @Autowired
-    private UserRepo userRepo;
 
     @Autowired
     private QuestionTypeRepo questionTypeRepo;
@@ -90,13 +93,13 @@ public class ExamService implements IExamService {
             Exam existingExam = examRepo.findById(examId)
                     .orElseThrow(() -> new IllegalArgumentException("Invalid examId"));
             if (existingExam != null) {
+                existingExam.setExamCode(exam.getExamCode());
                 existingExam.setExamStartTime(exam.getExamStartTime());
                 existingExam.setExamEndTime(exam.getExamEndTime());
                 existingExam.setExamDurationInMinutes(exam.getExamDurationInMinutes());
                 existingExam.setPassingCriteria(exam.getPassingCriteria());
                 existingExam.setPassingValue(exam.getPassingValue());
                 existingExam.setExamDate(exam.getExamDate());
-                existingExam.setTotalMarks(exam.getTotalMarks());
                 examRepo.save(existingExam);
                 return existingExam.getExamId();
             }
@@ -145,24 +148,24 @@ public class ExamService implements IExamService {
     }
 
     @Override
-    public QuestionsDTO getExamQuestions(int examId, int userId) {
+    public QuestionsDTO getExamQuestions(Exam exam, User user) {
         try {
-            User user = userRepo.findById(userId).orElseThrow(() -> new IllegalArgumentException("Invalid userId"));
-            Exam exam = examRepo.findById(examId).orElseThrow(() -> new IllegalArgumentException("Invalid examId"));
             ExamSubmission examSubmissionExists = examSubmissionRepo.findByUserAndExam(user, exam);
             QuestionType mcq =  questionTypeRepo.findByQuestionTypeText(QuestionTypeEnum.MCQ.name()).orElseThrow(() -> new IllegalArgumentException("Invalid question type"));
-            System.out.println(mcq);
             QuestionType programming =  questionTypeRepo.findByQuestionTypeText(QuestionTypeEnum.Programming.name()).orElseThrow(() -> new IllegalArgumentException("Invalid question type"));
-            List<Question> mcqQuestionsRaw = examQuestionsRepo.findByExamIdAndQuestionTypeId(examId,mcq.getQuestionTypeId());
-            List<Question> programmingQuestionsRaw = examQuestionsRepo.findByExamIdAndQuestionTypeId(examId,programming.getQuestionTypeId());
+            List<Question> mcqQuestionsRaw = examQuestionsRepo.findByExamIdAndQuestionTypeId(exam.getExamId(),mcq.getQuestionTypeId());
+            List<Question> programmingQuestionsRaw = examQuestionsRepo.findByExamIdAndQuestionTypeId(exam.getExamId(),programming.getQuestionTypeId());
             if (examSubmissionExists != null) {
-                List<QuestionsDTO.MCQQuestion> mcqDTOs = mcqQuestionsRaw.stream()
+                List<QuestionSubmission> mcqQuestions = questionSubmissionRepo.findByExamSubmissionAndUser(examSubmissionExists, user); 
+                List<ProgrammingSubmission> proQuestions = programmingSubmissionRepo.findByExamSubmissionAndUser(examSubmissionExists, user); 
+                List<QuestionsDTO.MCQQuestion> mcqDTOs = mcqQuestions.stream()
                         .map(this::convertToMCQDTO)
                         .toList();
 
-                List<QuestionsDTO.ProgrammingQuestion> programmingDTOs = programmingQuestionsRaw.stream()
-                        .map(this::convertToProgrammingDTO)
-                        .toList();
+                List<QuestionsDTO.ProgrammingQuestion> programmingDTOs = proQuestions.stream()
+                .map(this::convertToProgrammingDTO)
+                .toList();
+
                 return new QuestionsDTO(mcqDTOs, programmingDTOs);
 
             }
@@ -176,13 +179,7 @@ public class ExamService implements IExamService {
 
             List<QuestionSubmission> questionSubmissionsList = new ArrayList<>();
             List<ProgrammingSubmission> programmingSubmission = new ArrayList<>();
-            List<QuestionsDTO.MCQQuestion> mcqDTOs = mcqQuestionsRaw.stream()
-                    .map(this::convertToMCQDTO)
-                    .toList();
-
-            List<QuestionsDTO.ProgrammingQuestion> programmingDTOs = programmingQuestionsRaw.stream()
-                    .map(this::convertToProgrammingDTO)
-                    .toList();
+            
             mcqQuestionsRaw.forEach(question -> {
                 questionSubmissionsList.add(
                         new QuestionSubmission(
@@ -200,31 +197,45 @@ public class ExamService implements IExamService {
                                 question,
                                 ""));
             }); 
-            System.out.println(mcqDTOs);
             questionSubmissionRepo.saveAll(questionSubmissionsList);
             programmingSubmissionRepo.saveAll(programmingSubmission);
+            List<QuestionsDTO.MCQQuestion> mcqDTOs = questionSubmissionsList.stream()
+                        .map(this::convertToMCQDTO)
+                        .toList();
+
+            List<QuestionsDTO.ProgrammingQuestion> programmingDTOs = programmingSubmission.stream()
+            .map(this::convertToProgrammingDTO)
+            .toList();
             return new QuestionsDTO(mcqDTOs, programmingDTOs);
         } catch (Exception e) {
             System.out.println(e.getCause());
             return null;
         }
     }
-
-    private QuestionsDTO.MCQQuestion convertToMCQDTO(Question question) {
+    private QuestionsDTO.MCQQuestion convertToMCQDTO(QuestionSubmission question) {
         return new QuestionsDTO.MCQQuestion(
-                question.getQuestionId(),
-                question.getQuestionText(),
-                question.getOptions().stream()
-                        .map(option -> new QuestionsDTO.MCQQuestion.QuestionOption(option.getOptionId(),
-                                option.getOptionText()))
-                        .toList());
+            question.getQuestionSubmissionId(),
+            question.getQuestion().getQuestionText(),
+            question.getQuestionSubmissionStatus(),
+            question.getQuestion().getOptions() != null
+                ? question.getQuestion().getOptions().stream()
+                    .map(option -> new QuestionsDTO.MCQQuestion.QuestionOption(
+                        option.getOptionId(),
+                        option.getOptionText(),
+                        option.getOptionId() == (question.getSelectedOption() != null ? question.getSelectedOption().getOptionId() : -1)
+                    ))
+                    .collect(Collectors.toList())
+                : new ArrayList<>()
+        );
     }
 
-    private QuestionsDTO.ProgrammingQuestion convertToProgrammingDTO(Question question) {
+
+    private QuestionsDTO.ProgrammingQuestion convertToProgrammingDTO(ProgrammingSubmission question) {
         return new QuestionsDTO.ProgrammingQuestion(
-                question.getQuestionId(),
-                question.getQuestionText(),
-                question.getExamples().stream()
+                question.getProgrammingSubmissionId(),
+                question.getQuestion().getQuestionText(),
+                question.getSubmittedCode(),
+                question.getQuestion().getExamples().stream()
                         .map(example -> new QuestionsDTO.ProgrammingQuestion.ProgrammingExample(
                                 example.getExampleId(),
                                 example.getInputText(),
@@ -233,10 +244,10 @@ public class ExamService implements IExamService {
     }
 
     @Override
-    public int updateSelectedOption(int userId,int examSubmissionId,int questionId,  int optionId, int statusId) {
+    public int updateSelectedOption(int questionSubmissionId,int optionId, int statusId) {
         try {
             Integer optionIdFinal = optionId==0?null:optionId;
-            if(questionSubmissionRepo.updateOptionAndStatus(userId, examSubmissionId, questionId, optionIdFinal, statusId)>0){
+            if(questionSubmissionRepo.updateOptionAndStatus(questionSubmissionId, optionIdFinal, statusId)>0){
                 return 1;
             }
             return -1;
@@ -247,10 +258,11 @@ public class ExamService implements IExamService {
     }
 
     @Override
-    public int submitCode(int userId,int examSubmissionId,int questionId, String code) {
+    public int submitCode(int programmingSubmissionId, String code) {
         try {
-            questionSubmissionRepo.updateProgrammingCode(userId, examSubmissionId, questionId, code);
-            if(questionSubmissionRepo.updateProgrammingCode(userId, examSubmissionId, questionId, code)>0){
+            System.out.println(programmingSubmissionId);
+            System.out.println(code);
+            if(questionSubmissionRepo.updateProgrammingCode(programmingSubmissionId, code)>0){
                 return 1;
             }
             return -1;
@@ -261,18 +273,17 @@ public class ExamService implements IExamService {
     }
 
     @Override
-    public int submitExam(int userId,int examSubmissionId) {
+    public int submitExam(int examSubmissionId) {
         try {
             ExamSubmission examSubmission = examSubmissionRepo.findById(examSubmissionId).orElseThrow(()-> new InvalidAttributesException("Invalid ExamSubmissionId"));
             int scoredMarks = calculateScoredMarks(examSubmissionId);
-            System.out.println(scoredMarks);
             examSubmission.setScoredMarks(scoredMarks);
-            if(LocalDateTime.now().isAfter(examSubmission.getExam().getExamEndTime())){
+            if(LocalTime.now().isAfter(examSubmission.getExam().getExamEndTime())){
                 examSubmission.setExamStatus(examStatusRepo.findByExamStatusText(ExamStatusEnum.Late.name()));
             }else{
                 examSubmission.setExamStatus(examStatusRepo.findByExamStatusText(ExamStatusEnum.Completed.name()));
             }
-            examSubmission.setExamEndTime(LocalDateTime.now());
+            // examSubmission.setExamEndTime(LocalDateTime.now());
             examSubmissionRepo.save(examSubmission);
             return 1;
         } catch (Exception e) {
@@ -281,12 +292,81 @@ public class ExamService implements IExamService {
         }
     }
 
-    public int calculateScoredMarks(int examSubmissionId){
-        int totalScoredMarks = 0;
-        List<QuestionSubmission> questions = questionSubmissionRepo.getCorrectSubmissions(examSubmissionId);
-        for (QuestionSubmission question : questions) {
-            totalScoredMarks += question.getQuestion().getDifficulty().getDifficultyWeight();
+    @Override
+    public List<ExamResultDetailDTO> getExamResultDetails(int page,int limit,String search) {
+        try {
+            System.out.println(page);
+            System.out.println(limit);
+            System.out.println(search);
+            List<ExamResultDetailDTO> examResultDetailDTOs = new ArrayList<>();
+            List<Exam> exams;
+            int offset = (page - 1) * limit;
+            if(search.trim().isBlank()){
+                exams = examRepo.getExamList(limit,offset);
+
+            }else{
+                exams = examRepo.getExamListWithSearch(limit,offset,search);
+            }
+            for (Exam exam : exams) {
+                List<ExamSubmission> examSubmissions = examSubmissionRepo.findByExam(exam);
+                int totalMarks = exam.getTotalMarks();
+                PassingCriteria passingCriteria = exam.getPassingCriteria();
+                int passingValue = exam.getPassingValue();
+                int totalStudents=examSubmissions.size();
+                int totalQualifiedStudents=0;
+                for(ExamSubmission examSub:examSubmissions){
+                    if(passingCriteria.getPassingCriteriaText().equals(PassingCriteriaEnum.Percentage.name())){
+                        if(((examSub.getScoredMarks()*100)/(totalMarks==0?1:totalMarks))>=passingValue){
+                            totalQualifiedStudents++;
+                        }
+                    }
+                }
+                if(passingCriteria.getPassingCriteriaText().equals(PassingCriteriaEnum.Top.name())){
+                    totalQualifiedStudents=passingValue;
+                }
+                examResultDetailDTOs.add(new ExamResultDetailDTO(exam.getExamId(),exam.getExamCode(),exam.getExamDate(),totalStudents,totalQualifiedStudents));
+                
+                
+            }
+            return examResultDetailDTOs;
+        } catch (Exception e) {
+            System.out.println(e);
+            return null;
         }
-        return totalScoredMarks;
+    }
+
+    
+
+    public int calculateScoredMarks(int examSubmissionId){
+        // int totalScoredMarks = 0;
+
+        // For v1 
+        List<QuestionSubmission> questions = questionSubmissionRepo.getCorrectSubmissions(examSubmissionId);
+        return questions.size();
+
+        // For v2 
+        // List<QuestionSubmission> questions = questionSubmissionRepo.getCorrectSubmissions(examSubmissionId);
+        // for (QuestionSubmission question : questions) {
+        //     totalScoredMarks += question.getQuestion().getDifficulty().getDifficultyWeight(); //For V2 when there will be question as per difficulty 
+        // }
+        // return totalScoredMarks;
+
+    }
+    @Override
+    public List<Exam> getExams(int page,int limit,String search) {
+        try {
+            int offset = (page - 1) * limit;
+            List<Exam> exams;
+            if(search.trim().isBlank()){
+                exams = examRepo.getExamList(limit,offset);
+
+            }else{
+                exams = examRepo.getExamListWithSearch(limit,offset,search);
+            }
+            return exams;
+        } catch (Exception e) {
+            System.out.println(e.getCause());
+            return null;
+        }
     }
 }
